# Mrgig7_Autonomous-Al-powered-SRE-Agent

./: .env.example  .gitignore  LICENSE  QUICKSTART.md  README.md  docker-compose.yml  migration_log.txt  pyproject.toml  run_migrate.py
.github/workflows/: analyze.yml  ci.yml
.trae/documents/: Phase 0-1 Baseline Audit and Fix Safety Policy Engine.md  Phase 2 Deterministic Plan-Patch-Validate Pipeline.md  Phase 3 Offline Evaluation Harness.md  Phase 4 Supply Chain Security + Provenance Artifacts.md  Phase 6 Explainability + Trust Dashboard.md  Phase 7 Reliability & Operations.md  Phase 8 — Observability Polish.md
alembic/: env.py
alembic/versions/: 001_initial_pipeline_events.py  002_add_users_auth.py  003_add_fix_pipeline_runs.py  004_add_fix_pipeline_artifacts.py  005_fix_pipeline_adapter.py  006_phase7_reliability.py  007_phase1_onboarding_installations.py  008_phase3_autonomous_pipeline.py  009_phase4_consensus_core.py
config/: safety_policy.yaml
docker/: sandbox.Dockerfile
docs/: PUBLISHING.md  observability.md  ops.md  phase1_onboarding.md  phase2_repo_integration.md  pipeline.md
evals/: README.md  __init__.py  dataset.py  metrics.py  reporting.py  run.py  runner.py
frontend/: package.json
frontend/src/: App.tsx
observability/otel-collector/: config.yml
observability/prometheus/: alerts.yml  prometheus.yml
scripts/: phase4_smoke.py
src/sre_agent/: celery_app.py  config.py  database.py  main.py
test-harness/: .gitignore  Makefile  README.md  check_github_status.py  docker-compose.test.yml  run_harness.py  test_webhook_debug.py
test-harness/sample-app/: .env.example  README.md  config.py  docker-compose.yml  failure_injections.py
test-harness/testing-agent/: __init__.py  api_client.py  config.py  reporter.py  requirements.txt  validator.py
tests/: conftest.py
tests/api/: test_explain_endpoints.py  test_metrics_endpoint.py  test_phase1_website_endpoints.py  test_phase2_webhook_repo_integration.py  test_webhook_dedupe_and_throttle.py
tests/integration/: test_webhook_endpoint.py
tests/unit/: test_adapter_registry.py  test_build_log_ingestion.py  test_consensus.py  test_dashboard_events.py  test_docker_adapter_detection.py  test_log_parser.py  (+20 more)
(+388 files in other folders)
