[tool.poetry]
name = "sre-agent"
version = "0.1.0"
description = "Self-Healing CI/CD Platform - Autonomous AI-powered SRE Agent"
authors = ["SRE Agent Team"]
readme = "README.md"
packages = [{include = "sre_agent", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.30.0"
alembic = "^1.13.0"
celery = {extras = ["redis"], version = "^5.3.6"}
redis = ">=5.0.0,<6.5"
python-json-logger = "^2.0.7"
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"
opentelemetry-instrumentation-fastapi = "^0.43b0"
opentelemetry-exporter-otlp = "^1.22.0"
prometheus-client = "^0.20.0"
httpx = "^0.26.0"
numpy = "^2.0.0"
bcrypt = "^5.0.0"
pyjwt = "^2.10.1"
email-validator = "^2.3.0"
pyyaml = "^6.0.2"
docker = "^7.1.0"

[tool.poetry.group.ml.dependencies]
# Optional ML dependencies for similarity search
sentence-transformers = "^2.2.0"
faiss-cpu = "^1.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
testcontainers = "^3.7.0"
black = "^24.1.0"
ruff = "^0.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py311']
extend-exclude = 'evals/(dataset|results)/'

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["evals/dataset/**", "evals/results/**"]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "UP007"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disable_error_code = [
  "arg-type",
  "assignment",
  "attr-defined",
  "call-arg",
  "dict-item",
  "index",
  "import-untyped",
  "list-item",
  "misc",
  "no-any-return",
  "var-annotated",
]
warn_return_any = true
warn_unused_ignores = true
